syntax = "proto3";

import "google/protobuf/empty.proto"; 

package users;

service UsersService {
    rpc RegisterAdmin (IRegisterAdminDto) returns (IAuthResponse) {}

    rpc Login (ILoginDto) returns (IAuthResponse) {}

    rpc RefreshProfile (IRefreshProfileDto) returns (IAuthResponse) {}

    rpc InviteUsers (IInviteUsersDto) returns (google.protobuf.Empty) {}

    rpc ConfirmInvitation (IConfirmInvitationDto) returns (IAuthResponse) {}

    rpc ResetPassword (IResetPasswordDto) returns (google.protobuf.Empty) {}

    rpc UpdatePassword (IUpdatePasswordDto) returns (google.protobuf.Empty) {}

    rpc ActivateAccount (IActivateAccountDto) returns (google.protobuf.Empty) {}

    rpc DeactivateAccount (IDeactivateAccountDto) returns (google.protobuf.Empty) {}

    rpc GenerateTotp (IGenerateTotpDto) returns (IGenerateTotpResponse) {}

    rpc EnableTotp (IEnableTotpDto) returns (google.protobuf.Empty) {}

    rpc DisableTotp (IDisableTotpDto) returns (google.protobuf.Empty) {}

    rpc LoginWithTotp (ILoginWithTotpDto) returns (IAuthResponse) {}
}

message IRegisterAdminDto {
    string username = 1;

    string email = 2;

    string password = 3;
}

message ILoginDto {
    string login = 1;

    string password = 2;
}

message IRefreshProfileDto {
    string userId = 1;
}

message IAuthResponse {
    string id = 1;

    string username = 2;
    
    string email = 3;

    string role = 4;

    string organizationId = 5;

    string token = 6;
}

message IInviteUsersDto {
    string organizationId = 1;

    string adminEmail = 2;

    repeated string emails = 3;
}

message IConfirmInvitationDto {
    string username = 1;

    string password = 2;

    string token = 3;
}

message IResetPasswordDto {
    string userId = 1;
}

message IUpdatePasswordDto {
    string token = 1;

    string password = 2;
}

message IActivateAccountDto {
    string userId = 1;
}

message IDeactivateAccountDto {
    string userId = 1;
}

message IGenerateTotpDto {
    string userId = 1;

    string userEmail = 2;
}

message IGenerateTotpResponse {
    string qrCode = 1;

    string secret = 2;
}

message IEnableTotpDto {
    string userId = 1;

    string userEmail = 2;

    string secret = 3;

    string pin = 4;
}

message IDisableTotpDto {
    string userId = 1;
}

message ILoginWithTotpDto {
    string userId = 1;

    string userEmail = 2;

    string pin = 3;
}